<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anhbackground"
    android:orientation="vertical"
    tools:context="transparentscreen.skyfree.com.transparentscreen.com.skyfree.transparentscreen.activity.MainActivity">

    <Button
        android:id="@+id/btncamera"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:background="@drawable/buttonback"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Start"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/btnanimation"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonback"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/boy_on_screen"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnlaser"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonback"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/laser"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>
