<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/anhnen4"
    android:weightSum="1">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        android:layout_weight="0.29"
        android:weightSum="1">

        <Button
            android:id="@+id/btnback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="35dp"
            android:paddingTop="5dp"
            android:text="@string/boy_on_screen"
            android:textColor="@android:color/background_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="228dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="30dp"
                android:text="@string/orientation"
                android:textColor="@android:color/background_light"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:buttonTint="@color/your_color"
                >

                <RadioButton
                    android:id="@+id/radiodoc"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radionbutton"
                    android:button="@null"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radiongang"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/radionbutton"
                    android:button="@null"
                    android:buttonTint="@color/your_color" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:src="@drawable/doc" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ngang" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/off_turle"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnOnAnimation"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonback"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/show_turle"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

</LinearLayout>
